Interface:
- removed spin coupled flag spcpl from projector subroutines and replaced it with 
  the combination of ncmag and spinorb (as spcpl = ncmag .or. spinorb).
- updated the previously name wrmt to wr2mt.
- renamed the hacked gwscrho.f90 to dftdmftrho.f90 and removed all sc-gw content.  

Developer TO DO:
- Test tasks 803 (outputs seem reasonable for Test 36), 808 (Runs fine) and 809 (Runs fine).
  Need to test with TRIQS.
- merge dmft specific routines into gndstate.f90.

elk-10.6.2
-Eddie Harris-Lee fixed a problem with the time-dependent excited charge for the
 spin-polarised case
-fixed a long-standing problem with polarised core contribution to the Mössbauer
 hyperfine fields; thanks to Laura Saccani and Pietro Bonfa for all the careful
 testing
-included averaging over the Thomson radius volume for the contact densities and
 hyperfine fields; this is in addition to averaging over the nuclear volume
-added higher-order relativistic effects related to magnetism; these are the
 diamagnetic contribution, enabled by setting bfdmag=.true., and the
 B-field-orbit coupling, enabled by setting bforb=.true.; by default the
 contribution is from the external field (bfieldc) only, unless tbdip=.true. in
 which case the internal dipole field is also added; experimental feature
-further optimisations and improvements to parallelism

elk-10.5.16
-restored potential-only meta-GGA functionals such as Becke-Johnson '06 and
 Tran-Blaha '09; see elk/examples/meta-GGA/Si-Tran-Blaha
-added B-field-orbit coupling and B-field diamagnetic coupling; enabled by
 setting 'bforb' and 'bfdmag' to .true., respectively; thanks to Michael Fechner
 for the suggestion; experimental feature
-Wenhan Chen added the option to read in spatially-dependent external magnetic
 fields for the ultra long-range ansatz
-added fixed spin moment types (fsmtype) 4, 5 and 6; these yield fixed spin
 moment magnitudes for the total moment, muffin-tin moments or both,