@@ -1,0 +1,4 @@
+'total energy'
+       2       1
+    0.100000000000E-04
+       1    -7610.33926085    
