@@ -1,0 +1,4 @@
+'calculated total charge'
+       2       1
+    0.100000000000E-05
+       1     131.023519905    
