@@ -1,0 +1,4 @@
+'DOS at Fermi energy'
+       2       1
+    0.500000000000E-02
+       1     192.973439093    
