@@ -1,0 +1,4 @@
+'estimated indirect band gap'
+       2       1
+    0.200000000000E-01
+       1    0.662854894080E-03
