@@ -1,0 +1,3 @@
+'number of crystal symmetries'
+       1       1
+       1       8
