@@ -1,0 +1,3 @@
+'number of G-vectors'
+       1       1
+       1   60433
