@@ -1,0 +1,21 @@
+'k-points (Cartesian)'
+       2      18
+    0.100000000000E-07
+       1     0.00000000000    
+       2     0.00000000000    
+       3     0.00000000000    
+       4    0.169638709996    
+       5     0.00000000000    
+       6     0.00000000000    
+       7    0.339277419991    
+       8     0.00000000000    
+       9     0.00000000000    
+      10    0.169638709996    
+      11    0.169638709996    
+      12     0.00000000000    
+      13    0.339277419991    
+      14    0.169638709996    
+      15     0.00000000000    
+      16    0.339277419991    
+      17    0.339277419991    
+      18     0.00000000000    
